--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -8,7 +8,7 @@ RogueLibs is a library for modding Streets of Rogue.
 
 The game's code is pretty bad, so if you try to mod the game yourself, you'll end up with way too many patches! Let RogueLibs handle all of the patching, and **you just focus on the content!**
 
-Check out the [installation guide](#installation)!
+Check out the [installation guide](user/installation.mdx)!
 
 :::note Work-In-Progress
 
