--- a/docs/user/installation.mdx
+++ b/docs/user/installation.mdx
@@ -7,6 +7,7 @@ id: installation
 import Tabs from '@site/src/components/Tabs';
 import TabItem from '@site/src/components/TabItem';
 import MicrosoftButton from '@site/src/components/MicrosoftButton';
+import useBaseUrl from '@docusaurus/useBaseUrl';
 
 ## Installing BepInEx {#bepinex}
 
@@ -46,8 +47,6 @@ Here's a few pointers:
 </Tabs>
 
 ### Extracting files {#bepinex-extract}
-
-import useBaseUrl from '@docusaurus/useBaseUrl';
 
 <Tabs
     groupId="vendor"
@@ -95,7 +94,7 @@ Try looking at these paths:
 </Tabs>
 
 </TabItem>
-</Tabs>
+</Tabs><br/>
 
 **Extract the contents of the .zip file into the game's root directory.**
 
@@ -136,9 +135,7 @@ Make sure you extract it the right way. There's a lot of wrong ways, apparently.
 ### Running the game {#bepinex-first-run}
 
 :::note
-
 You need to run the game at least once, so that BepInEx can generate config files and directories!
-
 :::
 
 import BrowserWindow from '@site/src/components/BrowserWindow';
@@ -162,7 +159,7 @@ You can close the game once you see a logo or a loading screen.
 
 Open the included `run_bepinex.sh` script and edit the highlighted line to be the name of the executable:
 
-```sh title="run_bepinex.sh" {14}
+```bash title="run_bepinex.sh" {14}
 #!/bin/sh
 # BepInEx running script
 #
@@ -186,7 +183,7 @@ Open the terminal in the game's root directory and add execution permission to t
 
 <BrowserWindow>
 
-```sh
+```bash
 chmod u+x run_bepinex.sh
 ```
 
@@ -196,7 +193,7 @@ Now you can run BepInEx by executing the script:
 
 <BrowserWindow>
 
-```sh
+```bash
 ./run_bepinex.sh
 ```
 
@@ -207,7 +204,7 @@ Now you can run BepInEx by executing the script:
 
 Open the included `run_bepinex.sh` script and edit the highlighted line to be the name of the executable **(including the `.app` extension)**:
 
-```sh title="run_bepinex.sh" {14}
+```bash title="run_bepinex.sh" {14}
 #!/bin/sh
 # BepInEx running script
 #
@@ -231,7 +228,7 @@ Open the terminal in the game's root directory and add execution permission to t
 
 <BrowserWindow>
 
-```sh
+```bash
 chmod u+x run_bepinex.sh
 ```
 
@@ -241,7 +238,7 @@ Now you can run BepInEx by executing the script:
 
 <BrowserWindow>
 
-```sh
+```bash
 ./run_bepinex.sh
 ```
 
@@ -281,7 +278,7 @@ Screenshot needed
 
 And type in:
 
-```sh
+```bash
 ./run_bepinex.sh %command%
 ```
 
@@ -306,7 +303,7 @@ Now, open a terminal in the game's root directory and run:
 
 <BrowserWindow>
 
-```sh
+```bash
 pwd
 ```
 
@@ -314,7 +311,7 @@ pwd
 
 You'll get the full path to the game's root directory. Copy and paste it into the launch options field and then append `/run_bepinex.sh %command%`:
 
-```sh
+```bash
 <PWD>/run_bepinex.sh %command%
 ```
 
@@ -340,26 +337,20 @@ Click **OK** and run the game through Steam.
 You need to download only one file - `RogueLibs.dll`.
 
 :::note
-
 Screenshot needed
-
 :::
 
 Go to the BepInEx's directory and put `RogueLibs.dll` into `plugins` directory:
 
 :::note
-
 Screenshot/GIF needed
-
 :::
 
 </TabItem>
 <TabItem value="v3">
 
 :::caution
-
 RogueLibs v3.x.x is still in beta! Backup your save files before installing it.
-
 :::
 
 **[Download the latest RogueLibs version](https://github.com/Abbysssal/RogueLibs/releases)**
@@ -367,25 +358,19 @@ RogueLibs v3.x.x is still in beta! Backup your save files before installing it.
 You need to download only two files: `RogueLibsCore.dll` and `RogueLibsPatcher.dll`.
 
 :::note
-
 Screenshot needed
-
 :::
 
 Go to the BepInEx's directory and put `RogueLibsCore.dll` into `plugins` directory:
 
 :::note
-
 Screenshot/GIF needed
-
 :::
 
 Put `RogueLibsPatcher.dll` into `patchers` (not `plugins`!) directory:
 
 :::note
-
 Screenshot/GIF needed
-
 :::
 
 </TabItem>
@@ -398,7 +383,5 @@ Download the plugins that you want to install (`.dll`s).
 And put the `.dll` files in the `BepInEx/plugins` directory.
 
 :::note
-
 Screenshot needed
-
 :::
