reference setup.mdx

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -10,6 +10,8 @@ The game's code is pretty bad, so if you try to mod the game yourself, you'll en
 
 Check out the [installation guide](user/installation.mdx)!
 
+There's also a [Getting Started](dev-start/setup.mdx) guide for plugin developers!
+
 :::note Work-In-Progress
 
 The guide is still being worked on!
