some fixes, additions, improvements

--- a/docs/user/installation.mdx
+++ b/docs/user/installation.mdx
@@ -1,7 +1,3 @@
----
-id: installation
----
-
 # Installation
 
 import Tabs from '@site/src/components/Tabs';
@@ -94,7 +90,7 @@ Try looking at these paths:
 </Tabs>
 
 </TabItem>
-</Tabs><br/>
+</Tabs>
 
 **Extract the contents of the .zip file into the game's root directory.**
 
@@ -187,7 +183,7 @@ Open the terminal in the game's root directory and add execution permission to t
 chmod u+x run_bepinex.sh
 ```
 
-</BrowserWindow><br/>
+</BrowserWindow>
 
 Now you can run BepInEx by executing the script:
 
@@ -197,7 +193,7 @@ Now you can run BepInEx by executing the script:
 ./run_bepinex.sh
 ```
 
-</BrowserWindow><br/>
+</BrowserWindow>
 
 </TabItem>
 <TabItem value="macos">
@@ -232,7 +228,7 @@ Open the terminal in the game's root directory and add execution permission to t
 chmod u+x run_bepinex.sh
 ```
 
-</BrowserWindow><br/>
+</BrowserWindow>
 
 Now you can run BepInEx by executing the script:
 
@@ -242,7 +238,7 @@ Now you can run BepInEx by executing the script:
 ./run_bepinex.sh
 ```
 
-</BrowserWindow><br/>
+</BrowserWindow>
 
 </TabItem>
 </Tabs>
@@ -307,7 +303,7 @@ Now, open a terminal in the game's root directory and run:
 pwd
 ```
 
-</BrowserWindow><br/>
+</BrowserWindow>
 
 You'll get the full path to the game's root directory. Copy and paste it into the launch options field and then append `/run_bepinex.sh %command%`:
 
