--- a/docs/dev-items/create-item.mdx
+++ b/docs/dev-items/create-item.mdx
@@ -88,7 +88,7 @@ public void Awake()
 ```
 
 :::info
-See [Using Custom Names](../dev-extra/names), [Custom Sprites](./dev-extra/sprites) for more info.
+See [Using Custom Names](../dev-extra/names), [Custom Sprites](../dev-extra/sprites) for more info.
 :::
 
 ## Implementing `SetupDetails` {#setupdetails}
