--- a/docs/setup.mdx
+++ b/docs/setup.mdx
@@ -1,4 +1,4 @@
-# Getting started
+# Getting Started
 
 import Tabs from '@site/src/components/Tabs';
 import TabItem from '@site/src/components/TabItem';
