--- a/docs/dev-extra/sprites.mdx
+++ b/docs/dev-extra/sprites.mdx
@@ -36,7 +36,7 @@ Now you should be able to reference your sprites' data from the code like this: 
 If you get an error, then make sure that the default namespace, that is specified in project's properties in **Application** tab, is the same as the one you're using.
 :::
 
-## Initialization
+## Initialization {#initialization}
 
 Normally, new instances of `RogueSprite` are created like this:
 
@@ -56,3 +56,19 @@ RogueLibs.CreateCustomSprite("name", SpriteScope.Items, Properties.Resources.Res
 :::caution Work-In-Progress
 This section is being worked on.
 :::
+
+By default, RogueLibs uses the entire file as a texture. You can specify the region of the texture used with a `Rect` parameter:
+
+```csharp
+RogueLibs.CreateCustom("name", SpriteScope.Items, Properties.Resources.ResourceName,
+                                // highlight-next-line
+                                new Rect(64f, 64f, 128f, 128f));
+```
+
+If you're going to use non-64x64 textures, then you need to specify the PPU (pixels-per-unit) parameter too:
+
+```csharp
+RogueLibs.CreateCustom("name", SpriteScope.Items, Properties.Resources.ResourceName,
+                                // highlight-next-line
+                                new Rect(64f, 64f, 128f, 128f), 128f);
+```
