--- a/docs/dev-items/create-item.mdx
+++ b/docs/dev-items/create-item.mdx
@@ -36,6 +36,20 @@ public class MyCustomItem : CustomItem
 
 This method is called only once, when the item is created or spawned.<br/>See more info [later on this page](#setupdetails).
 
+You should add categories using `ItemCategories` attribute instead of adding them in `SetupDetails`. `RogueCategories` contains consts for all default ItemCategories:
+
+```csharp title="MyCustomItem.cs"
+[ItemCategories(RogueCategories.Usable, RogueCategories.Weird, "MyCustomCategory")]
+public class MyCustomItem : CustomItem
+{
+    ...
+}
+```
+
+:::tip
+Use static types with string consts, like `RogueCategories` and `ItemTypes`. This way you won't make a typo. Typos can be critical sometimes, since neither the game nor RogueLibs track all existing item categories *(although it's an interesting idea, maybe I'll do something like that)*. You might not even realize that there's a typo.
+:::
+
 By default, your custom item will have the same name as the class (`Type.Name`).<br/>You can change that behavior with an `ItemName` attribute:
 
 ```csharp title="MyCustomItem.cs"
