fix and improve some stuff

--- a/docs/dev-extra/names.mdx
+++ b/docs/dev-extra/names.mdx
@@ -84,7 +84,7 @@ RogueLibs.CreateCustomItem<MyCustomItem>()
     .WithDescription(new CustomNameInfo("English description"));
 ```
 
-You can initialize them yourself too, although you have to provide the name and type of the CustomName yourself:
+You can initialize them yourself too, although you have to provide the name and type of the `CustomName` yourself:
 
 ```csharp
 CustomName name = RogueLibs.CreateCustomName("Name", "Type", new CustomNameInfo("Info"));
