--- a/docs/user/installation.mdx
+++ b/docs/user/installation.mdx
@@ -32,7 +32,7 @@ Here's a few pointers:
 
 - If you have **more than 4 Gb of RAM**, then you definitely have a **64-bit OS**. A 32-bit version simply cannot use more than 4 Gb of RAM, because of, you know, 32 bits (2^32 bytes = 4 gigabytes).
 - If you have Windows 10, <MicrosoftButton link="ms-settings:about">Open About settings</MicrosoftButton> (or `⊞ Win`+`I` > **System** > **About**). You'll see what version of Windows you're running under **Device specifications: System type**.
-- If you have Windows 7 or 8, then [go here](https://support.microsoft.com/en-us/windows/which-version-of-windows-operating-system-am-i-running-628bec99-476a-2c13-5296-9dd081cdd808).
+- If you have Windows 7 or 8, then [go here](https://support.microsoft.com/en-us/windows/which-version-of-windows-operating-system-am-i-running-628bec99-476a-2c13-5296-9dd081cdd808#ID0EBBD=Windows_7).
 
 </TabItem>
 <TabItem values={["linux", "macos"]}>
@@ -245,7 +245,7 @@ Now you can run BepInEx by executing the script:
 </TabItem>
 </Tabs>
 
-### Running BepInEx through Steam
+### Running BepInEx through Steam {#bepinex-steam}
 
 <Tabs
     groupId="os"
