--- a/docs/dev-items/usable-items.mdx
+++ b/docs/dev-items/usable-items.mdx
@@ -88,7 +88,7 @@ RogueLibs.CreateCustomItem<JokeBook>()
 </TabItem>
 <TabItem value="quantumfud">
 
-A slightly more complicated food item. Uses `IDoUpdate` interface for cooldown.
+A slightly more complicated food item. Uses [`IDoUpdate` interface](../dev-extra/other#update-interfaces) for cooldown.
 
 ```csharp title="QuantumFud.cs"
 [ItemCategories(RogueCategories.Food, RogueCategories.Technology)]
