translate missing title

--- a/i18n/ru/docusaurus-plugin-content-docs/current/user/installation.mdx
+++ b/i18n/ru/docusaurus-plugin-content-docs/current/user/installation.mdx
@@ -245,7 +245,7 @@ chmod u+x run_bepinex.sh
 </TabItem>
 </Tabs>
 
-### Running BepInEx through Steam {#bepinex-steam}
+### Запускаем BepInEx через Steam {#bepinex-steam}
 
 <Tabs
     groupId="os"
