fix and update stuff

--- a/docs/user/installation.mdx
+++ b/docs/user/installation.mdx
@@ -310,7 +310,7 @@ pwd
 You'll get the full path to the game's root directory. Copy and paste it into the launch options field and then append `/run_bepinex.sh %command%`:
 
 ```bash
-<PWD>/run_bepinex.sh %command%
+"<PWD>/run_bepinex.sh" %command%
 ```
 
 where `<PWD>` is the full path to the game's root directory.
