--- a/i18n/ru/docusaurus-plugin-content-docs/current/user/installation.mdx
+++ b/i18n/ru/docusaurus-plugin-content-docs/current/user/installation.mdx
@@ -310,7 +310,7 @@ pwd
 Выведется полный путь к корневой папке игры. Скопируйте и вставьте его в поле параметров запуска и добавьте к концу `/run_bepinex.sh %command%`:
 
 ```bash
-<PWD>/run_bepinex.sh %command%
+"<PWD>/run_bepinex.sh" %command%
 ```
 
 где `<PWD>` - полный путь к корневой папке игры.
