--- a/docs/dev-items/create-item.mdx
+++ b/docs/dev-items/create-item.mdx
@@ -47,7 +47,7 @@ public class MyCustomItem : CustomItem
 ```
 
 :::tip
-Use static types with string consts, like `RogueCategories` and `ItemTypes`. This way you won't make a typo. Typos can be critical sometimes, since neither the game nor RogueLibs track all existing item categories *(although it's an interesting idea, maybe I'll do something like that)*. You might not even realize that there's a typo.
+Use static types with string consts, like `RogueCategories` and `ItemTypes`. This way you won't make a typo. Typos can be critical sometimes, since neither the game nor RogueLibs track all existing item categories *(although it's an interesting idea, maybe I'll do something like that)*.
 :::
 
 By default, your custom item will have the same name as the class (`Type.Name`).<br/>You can change that behavior with an `ItemName` attribute:
