--- a/docs/dev-items/create-item.mdx
+++ b/docs/dev-items/create-item.mdx
@@ -102,7 +102,7 @@ public void Awake()
 ```
 
 :::info
-See [Custom Names](../dev-extra/names), [Custom Sprites](../dev-extra/sprites) for more info.
+See [Custom Names](../dev-intro/names), [Custom Sprites](../dev-intro/sprites) for more info.
 :::
 
 ## Implementing `SetupDetails` {#setupdetails}
