start writing trait guide

--- a/docs/dev-items/combinable-items.mdx
+++ b/docs/dev-items/combinable-items.mdx
@@ -4,7 +4,7 @@ import Tabs from '@site/src/components/Tabs';
 import TabItem from '@site/src/components/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-## Making items combinable
+## Making items combinable {#making-combinable}
 
 Just implement the `IItemCombinable` interface in your item's class:
 
@@ -21,7 +21,7 @@ public class MyCustomItem : CustomItem, IItemCombinable
 }
 ```
 
-## Examples
+## Examples {#examples}
 
 <Tabs
     defaultValue="grindstone"
