--- a/docs/dev-items/usable-items.mdx
+++ b/docs/dev-items/usable-items.mdx
@@ -21,7 +21,7 @@ public class MyCustomItem : CustomItem, IItemUsable
 }
 ```
 
-## Examples
+## Examples {#examples}
 
 <Tabs
     defaultValue="jokebook"
