--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -10,7 +10,7 @@ The game's code is pretty bad, so if you try to mod the game yourself, you'll en
 
 Check out the [installation guide](user/installation)!
 
-There's also a [Getting Started](dev-intro/setup) guide for plugin developers!
+There's also a [Getting Started](getting-started) guide for plugin developers!
 
 :::note Work-In-Progress
 
